xee-xpath-outer/tests/snapshots/xpath__compare_same.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"compare('str', 'str') instance of xs:integer\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
