xee-xpath-outer/tests/snapshots/xpath__deep_equal_equal_to_itself.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"deep-equal(/, /)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
