xee-xpath-outer/tests/snapshots/xpath__default_position_no_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:position()\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: SourceSpan(
            0,
            13,
        ),
    },
)
