xee-xpath-outer/tests/snapshots/xpath__element_namespace_wrong.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc xmlns=\"http://example.com\"><a/></doc>\"#, \"doc / local-name()\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
