xee-xpath-outer/tests/snapshots/xpath__every_quantifier_expr_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"every $x in (1, 2, 3) satisfies $x gt 2\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
