xee-xpath-outer/tests/snapshots/xpath__external_variable.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_with_variables(\"$foo\",\n    &[(ast::Name::unprefixed(\"foo\"),\n                    vec![Item :: from(Atomic :: from(\"FOO\"))])])"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "FOO",
                ),
            ),
        ),
    },
)
