xee-xpath-outer/tests/snapshots/xpath__external_variables.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_with_variables(\"$foo + $bar\",\n    &[(ast::Name::unprefixed(\"foo\"),\n                    vec![Item :: from(Atomic :: from(1i64))]),\n                (ast::Name::unprefixed(\"bar\"),\n                    vec![Item :: from(Atomic :: from(2i64))])])"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
