xee-xpath-outer/tests/snapshots/xpath__fn_root_explicit.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#,\n    \"fn:root(doc/a) / doc / b / fn:local-name()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "b",
                ),
            ),
        ),
    },
)
