xee-xpath-outer/tests/snapshots/xpath__function_closure_with_multiple_variables.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function() { let $x := 3, $y := 1 return function() { $x - $y } }()()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    2,
                ),
            ),
        ),
    },
)
