xee-xpath-outer/tests/snapshots/xpath__inline_function_call_with_let2.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"let $a := 1 return function($x, $y) { $x + $y }($a, let $b := 2 return $b)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
